# irssi-python

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  README  TODO  classes.txt  configure.ac  configure.in  constants.awk  constants.txt  irssi.py  irssi_startup.py  pyconstants.h  pycore.c  pyirssi.h  pyirssi_irc.h  pyloader.c  pyloader.h  pymodule.c  pysigmap.h  pysignals.c  pysignals.h  pysource.c  pysource.h  pystatusbar.c  pystatusbar.h  pythemes.c  pyutils.c  sig2code.py
docs/: irssi-python.html
objects/: Makefile  base-objects.c  base-objects.h  channel-object.c  chatnet-object.c  command-object.c  connect-object.c  dcc-chat-object.c  dcc-object.c  factory.c  factory.h  ignore-object.c  irc-channel-object.c  irc-connect-object.c  irc-server-object.c  log-object.c  main-window-object.c  netsplit-channel-object.c  netsplit-object.c  netsplit-server-object.c  nick-object.c  notifylist-object.c  process-object.c  pyscript-object.c  pyscript-object.h  query-object.c  rawlog-object.c  reconnect-object.c  server-object.c  statusbar-item-object.c  textdest-object.c  textdest-object.h  theme-object.c  window-item-object.c  window-object.c
scripts/: Makefile.am  beep_beep.py  dccmove.py  df.py  dumper.py  fork.py  hello.py  test_window.py
scripts/CVS/: Entries  Repository  Root
src/: Makefile.am  irssi.py  irssi_startup.py  pycore.c  pycore.h  pyirssi.h  pyirssi_irc.h  pyloader.c  pyloader.h  pymodule.c  pymodule.h  pysigmap.h  pysignals.c  pysource.c  pythemes.c  pyutils.c  pyutils.h  sig2code.txt
src/objects/: Makefile  Makefile.am  ban-object.c  base-objects.c  base-objects.h  channel-object.c  chatnet-object.c  command-object.c  connect-object.c  dcc-chat-object.c  dcc-get-object.c  dcc-object.c  dcc-send-object.c  factory.c  ignore-object.c  irc-channel-object.c  irc-connect-object.c  irc-server-object.c  log-object.c  logitem-object.c  main-window-object.c  netsplit-channel-object.c  netsplit-object.c  netsplit-server-object.c  nick-object.c  notifylist-object.c  process-object.c  pyscript-object.c  pyscript-object.h  query-object.c  rawlog-object.c  reconnect-object.c  server-object.c  statusbar-item-object.c  textdest-object.c  theme-object.c  window-item-object.c  window-object.c
